Fixed wrap

--- a/play/css/skeleton.css
+++ b/play/css/skeleton.css
@@ -529,6 +529,7 @@ there.
     font-size: 4.8rem;
     padding: 0rem 2rem;
     caret-color: #fff;
+    overflow-wrap: break-word;
   }
 
   .slider-demo {
@@ -549,7 +550,7 @@ there.
       border: none;
     margin-top: 1rem;
       margin-bottom: -0.45rem;
-      width: 25vw;
+      width: 50vw;
       }
   /* Adjusts the style for the reset button */
   input[type="button"] {
